Changes in version 1.17
+ model explanded for designs with biological replicates 

Changes in version 1.15
+ model for gene usage (GU) analysis
+ model for multi-condition analysis, ANOVA like

Changes in version 1.12-1.13.2
+ variable naming and function naming scheme changed
+ paired-sample analysis stub created
+ multinomial model in testing

Changes in version 1.11.2-1.11.11 (2022-10-24)
+ man files updated
+ vignette updated
+ d_zibb data and inst/scripts/d_zibb.R added: simulated data from
  zero-inflated beta-binomial (ZIBB) distribution
+ minor fixes, function clarity/readibility improved
+ probe compilation errors on Windows
+ stanmodels used properly in v. 1.11.10, no extra compilation
+ stanmodels in tests/ fixed, no extra compilation

Changes in version 1.9.3 (2022-03-31)
+ input data checks extended

Changes in version 1.7.24 (2021-10-14)
+ minor model update: top level hyperpriors on alpha gamma par. 
means not needed anymore. Compare inst/extdata/zibb.stan vs. 
inst/extdata/zibb_original.stan

Changes in version 1.3.3  (2020-10-15)
+ More flexible model for microbial sample analysis provided in
inst folder, however, no interface is provided to it.

Changes in version 1.1.6  (2020-04-01)
+ Corresponding methodology published in Bioinformatics
+ Speedup in posterior prediction

Changes in version 0.99.0 (2019-07-15)
+ Submitted to Bioconductor