@@ -33,7 +33,8 @@ Suggests:
     ggplot2,
     ggforce,
     gridExtra,
-    ggrepel
+    ggrepel,
+    patchwork
 LinkingTo: 
     BH (>= 1.66.0),
     Rcpp (>= 0.12.0),
