@@ -28,6 +28,7 @@ require(ggforce)
 require(gridExtra)
 require(ggrepel)
 require(reshape2)
+require(patchwork)
 ```
 
 
@@ -87,7 +88,7 @@ with $\pi = 1$ for genes with strong differential usage, and $\pi = 0$ for
 genes with negligible differential gene usage. Both metrics are computed based
 on the posterior distribution of $\gamma$, and are thus related. 
 
-# Case Study A
+# Case Study A: analyzing data with two biological conditions
 `r Biocpkg("IgGeneUsage")` has a couple of built-in Ig gene usage datasets. 
 Some were obtained from studies and others were simulated.
 
@@ -146,12 +147,17 @@ M <- DGU(ud = d_zibb_2, # input data
 The following objects are provided as part of the output of DGU:
 
   * `dgu` (main results of `r Biocpkg("IgGeneUsage")`): quantitative 
-     DGU summary 
+     DGU summary [on a log-scale]
+  * `dgu_prob` (main results of `r Biocpkg("IgGeneUsage")`): quantitative 
+     DGU summary [on a probability-scale]
   * `gu`: quantitative summary of the gene usage (GU) of each gene in 
-     the different conditions
-  * `glm`: rstan ('stanfit') object of the fitted model $\rightarrow$ used for
-     model checks (see section 'Model checking')
+     the different conditions [on a probability-scale]
+  * `theta`: summary of the theta parameter marginals, i.e. the inferred 
+     probabilities of gene usage
   * `ppc`: posterior predictive checks data (see section 'Model checking')
+  * `ud`: processed Ig gene usage data 
+  * `fit`: rstan ('stanfit') object of the fitted model $\rightarrow$ used 
+     for model checks (see section 'Model checking')
 
 ```{r}
 summary(M)
@@ -446,6 +452,99 @@ ggplot(data = L_gu)+
 x <- acast(individual_id~gene_name, data = M$theta, value.var = "theta_mean")
 
 plot(hclust(dist(x, method = "euclidean"), method = "average"))
+```
+
+
+# Case Study B: analyzing data with biological replicates
+
+```{r}
+data("d_zibb_4", package = "IgGeneUsage")
+knitr::kable(head(d_zibb_4))
+```
+
+We can also visualize `d_zibb_4` with `r CRANpkg("ggplot")`:
+
+```{r, fig.width=6, fig.height=3.25}
+ggplot(data = d_zibb_4)+
+  geom_point(aes(x = gene_name, y = gene_usage_count, col = condition),
+             position = position_dodge(width = .7), shape = 21)+
+  theme_bw(base_size = 11)+
+  ylab(label = "Gene usage [count]")+
+  xlab(label = '')+
+  theme(legend.position = "top")+
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.4))
+```
+
+## Modeling
+
+```{r}
+M <- DGU(ud = d_zibb_4, # input data
+         mcmc_warmup = 500, # how many MCMC warm-ups per chain (default: 500)
+         mcmc_steps = 1500, # how many MCMC steps per chain (default: 1,500)
+         mcmc_chains = 3, # how many MCMC chain to run (default: 4)
+         mcmc_cores = 1, # how many PC cores to use? (e.g. parallel chains)
+         hdi_lvl = 0.95, # highest density interval level (de fault: 0.95)
+         adapt_delta = 0.8, # MCMC target acceptance rate (default: 0.95)
+         max_treedepth = 10) # tree depth evaluated at each step (default: 12)
+```
+
+
+## Posterior predictive checks
+
+```{r, fig.height = 6, fig.width = 6}
+ggplot(data = M$ppc$ppc_rep)+
+  facet_wrap(facets = ~individual_id, ncol = 3)+
+  geom_abline(intercept = 0, slope = 1, linetype = "dashed", col = "darkgray")+
+  geom_errorbar(aes(x = observed_count, y = ppc_mean_count, 
+                    ymin = ppc_L_count, ymax = ppc_H_count), col = "darkgray")+
+  geom_point(aes(x = observed_count, y = ppc_mean_count), size = 1)+
+  theme_bw(base_size = 11)+
+  theme(legend.position = "top")+
+  xlab(label = "Observed usage [counts]")+
+  ylab(label = "PPC usage [counts]")
+```
+
+## Analysis of estimated effect sizes
+The top panel shows the average gene usage (GU) in different biological 
+conditions. The bottom panels shows the differential gene usage (DGU) 
+between pairs of biological conditions.
+
+```{r, fig.weight = 7, fig.height = 4}
+g1 <- ggplot(data = M$gu)+
+  geom_errorbar(aes(x = gene_name, y = prob_mean, ymin = prob_L,
+                    ymax = prob_H, col = condition),
+                width = 0.1, position = position_dodge(width = 0.4))+
+  geom_point(aes(x = gene_name, y = prob_mean, col = condition), size = 1,
+             position = position_dodge(width = 0.4))+
+  theme_bw(base_size = 11)+
+  theme(legend.position = "top")+
+  ylab(label = "GU [probability]")+
+  theme(axis.text.x = element_text(angle = 90, hjust = 1, vjust = 0.4))
+
+
+stats <- M$dgu
+stats <- stats[order(abs(stats$es_mean), decreasing = FALSE), ]
+stats$gene_fac <- factor(x = stats$gene_name, levels = unique(stats$gene_name))
+
+g2 <- ggplot(data = stats)+
+  facet_wrap(facets = ~contrast)+
+  geom_hline(yintercept = 0, linetype = "dashed", col = "gray")+
+  geom_errorbar(aes(x = pmax, y = es_mean, ymin = es_L, ymax = es_H), 
+                col = "darkgray")+
+  geom_point(aes(x = pmax, y = es_mean, col = contrast))+
+  geom_text_repel(data = stats[stats$pmax >= 0.9, ],
+                  aes(x = pmax, y = es_mean, label = gene_fac),
+                  min.segment.length = 0, size = 2.75)+
+  theme_bw(base_size = 11)+
+  theme(legend.position = "top")+
+  xlab(label = expression(pi))+
+  xlim(c(0, 1))+
+  ylab(expression(gamma))
+```
+
+
+```{r, fig.weight = 5, fig.height = 6}
+(g1/g2)
 ```
 
 
